# genetic-pixel-art

./: .gitignore  README.md
.github/workflows/: cd.yml  rust_test.yml
crate/: .gitignore  Cargo.toml  LICENSE_MIT  rust-toolchain.toml
crate/.cargo/: config.toml
crate/src/: ga.rs  lib.rs  main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: crate_bg.wasm
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlgorithmModal.tsx  CodeBlock.tsx  ControlPanel.tsx  ExplanationDiagrams.tsx  MosaicCanvas.tsx
frontend/src/hooks/: useGeneticModel.ts
frontend/src/utils/: imageLoader.ts
