[package]
name = "crate"
version = "0.1.0"
authors = ["aoi318 <hamaoka3018@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "parallel"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.83", features = ["Window"] }
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
image = "0.25.9"
rayon = { version = "1.11.0", optional = true }
wasm-bindgen-rayon = { version = "1.3.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3